# github-actions-playground

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml
.github/workflows/: ci.yml  example.env  latest-changes.yml  publish.yml  test.yml
src/myapp/: __init__.py
tests/: test_init.py
