[tool.poetry]
name = "myapp"
version = "0"
description = ""
authors = ["Lev Vereshchagin <mail@vrslev.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"
